Add bamboo chime

--- a/src/main/resources/assets/windchimes/lang/en_us.json
+++ b/src/main/resources/assets/windchimes/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"block.windchimes.iron_chime": "Iron Wind Chime"
+	"block.windchimes.iron_chime": "Iron Wind Chime",
+	"block.windchimes.bamboo_chime": "Bamboo Wind Chime"
 }
