--- a/src/main/resources/assets/windchimes/lang/en_us.json
+++ b/src/main/resources/assets/windchimes/lang/en_us.json
@@ -1,8 +1,8 @@
 {
 	"block.windchimes.iron_chime": "Iron Wind Chime",
 	"block.windchimes.bamboo_chime": "Bamboo Wind Chime",
-	"subtitles.block.windchimes.iron_chime": "Iron Wind Chime chimes",
-	"subtitles.block.windchimes.bamboo_chime": "Bamboo Wind Chime chimes",
+	"block.windchimes.copper_chime": "Copper Wind Chime",
+	"subtitles.block.windchimes.chime": "Wind Chime chimes",
 	"modmenu.descriptionTranslation.windchimes": "This mod adds two wind chimes that sway in the wind and occasionally ring.",
 	"modmenu.summaryTranslation.windchimes": "Gentle chimes swaying in the wind"
 }
